se agregaron input

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!----------------HEADER---------------------------------------------->
     <header>
-        <img src="../img/logo-Dala.png" alt="logo-dala">
+        <img src="./img/logo-Dala.png" alt="logo-dala">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
 
