--- a/pages/crearcuenta.html
+++ b/pages/crearcuenta.html
@@ -90,6 +90,7 @@
                         <label class="form-check-label" for="checkChecked">
                             Whatsapp
                         </label>
+                        <input type="submit" value="Enviar">
                     </div>
                 </div>
         </div>
