--- a/pages/iniciarsesion.html
+++ b/pages/iniciarsesion.html
@@ -68,6 +68,7 @@
                 <label for="inputPassword" class="col-sm-2 col-form-label">Contraseña</label>
                 <div class="col-sm-10">
                     <input type="password" class="form-control" id="inputPassword">
+                    <input type="submit" value="Entrar">
                 </div>
             </div>
 
