se renombraron imagenes, se centralizo los elementos en vista desktop y mobile, se arreglo el header

--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -78,6 +78,8 @@
                 <div class="contactos">
                     <label for="Consulta_form">Consulta</label>
                     <textarea name="text" id="Consulta_form" placeholder="Escriba aqui"></textarea>
+                </div> 
+                <div class="contactos">
                     <input type="submit">
                 </div>
             </div>
