--- a/pages/iniciarsesion.html
+++ b/pages/iniciarsesion.html
@@ -57,18 +57,20 @@
     <!-------------MAIN------------->
     <main>
             <h2>Iniciar sesion</h2>
-            <div class="mb-3 row mx-auto">
+            <div class="container-6">
+                <div class="mb-3 row mx-auto">
                 <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
                 <div class="col-sm-10">
                     <input type="text" readonly class="form-control-plaintext" id="staticEmail">
                     <input type="text" class="form-control" id="staticEmail">
                 </div>
-            </div>
-            <div class="mb-3 row mx-auto">
+                </div>
+                <div class="mb-3 row mx-auto">
                 <label for="inputPassword" class="col-sm-2 col-form-label">Contraseña</label>
                 <div class="col-sm-10">
                     <input type="password" class="form-control" id="inputPassword">
                     <input type="submit" value="Entrar">
+                </div>
                 </div>
             </div>
 
