--- a/pages/productos.html
+++ b/pages/productos.html
@@ -59,9 +59,9 @@
         <!--------------MAIN-------------------->
 
     <main>
-    <div class="remeras-productos">
+    <div class="container-productos">
         <div class="productos">
-            <img src="../img/boxifitdark.jpeg" alt="remeraboxidark">
+            <img src="../img/boxifitdark.jpeg" alt="remeras-varios-colores-logo-dark-chico">
             <p>Remeras Boxi Fit Dark</p>
             <p>varios colores</p>
             <p>$11500</p>
@@ -69,7 +69,7 @@
         </div>
 
         <div class="productos">
-            <img src="../img/remeraameri1.jpeg" alt="remerasameri">
+            <img src="../img/remeraameri1.jpeg" alt="remera-varios-colores-duki-logo-ameri">
             <p>Remeras Ameri duki oversize</p>
             <p>varios colores</p>
             <p>$11500</p>
@@ -77,7 +77,7 @@
         </div>
 
         <div class="productos">
-            <img src="../img/remerachoppers.jpeg" alt="remeraschopper">
+            <img src="../img/remerachoppers.jpeg" alt="remera-negra-con-logo-choppers-blanco">
             <p>Remeras chopper oversize</p>
             <p>varios colores</p>
             <p>$11500</p>
@@ -85,7 +85,7 @@
         </div>
 
         <div class="productos">
-            <img src="../img/remerafenix.jpeg" alt="remerasfenix">
+            <img src="../img/remerafenix.jpeg" alt="remera-blanca-y-marron-logo-fenix-color-blanco">
             <p>Remeras Fenix oversize</p>
             <p>varios colores</p>
             <p>$11500</p>
@@ -93,22 +93,22 @@
         </div>
 
         <div class="productos">
-            <img src="../img/remeraglobal.jpeg" alt="remerasglobal">
+            <img src="../img/remeraglobal.jpeg" alt="remera-varios-colores-logo-global">
             <p>Remeras Global oversize</p>
             <p>varios colores</p>
             <p>$11500</p>
             <a href="">comprar</a>
         </div>
 
-        <div class="productos"> <img src="../img/remerasaragnida.jpeg" alt="remerasaragnida">
-            <p>Remeras Aragnida oversize</p>
+        <div class="productos"> <img src="../img/remerasaragnida.jpeg" alt="remera-vatios-colores-logo-mariposa-negro">
+            <p>Remeras Mariposa oversize</p>
             <p>varios colores</p>
             <p>$11500</p>
             <a href="">comprar</a>
         </div>
 
         <div class="productos">
-            <img src="../img/remeraskyline.jpeg" alt="remerasskyline">
+            <img src="../img/remeraskyline.jpeg" alt="remera-nissan-skayline-color-blanca">
             <p>Remeras Skyline oversize</p>
             <p>varios colores</p>
             <p>$11500</p>
